# custom-learning-app

./: .gitignore  .prettierignore  AGENTS.md  README.md  ROADMAP.md  app.js  eslint.config.js  index.html  package-lock.json  package.json  styles.css  svelte.config.js  vite.config.js
docs/: accessibility-and-quality-plan.md  kid-friendly-styleguide.md  module-implementation-plan.md  parent-oversight-and-insights-plan.md  roadmap-and-flows.md  student-incentives-plan.md
src/: app.css  app.html  main.jsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/data/: fryWords.js
src/lib/components/: ActiveLearnerCard.svelte  LearnerPanel.svelte  ModuleSelect.svelte  ParentSetup.svelte  PracticeCard.svelte  PracticeControls.svelte  SplashScreen.svelte  SummaryCards.svelte  TopBar.svelte  WordGrid.svelte
src/lib/utils/: practice.js
src/modules/: index.js
src/modules/sightWords/: SightWordsPracticeCard.svelte
src/routes/: +page.svelte
src/storage/: learningStorage.js
src/styles/: learning-theme.css
