[package]
name = "custom-learning-app"
version = "0.1.0"
description = "A local learning app for multiple learners and modules."
authors = ["Adam"]
edition = "2021"

[lib]
name = "custom_learning_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
